# tycho-indexer

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  OBSERVABILITY.md  README.md  Readme.md  check.sh  clippy.toml  docker-compose.yaml  env.sh  extractors.yaml  postgres.Dockerfile  release.config.js  shell.nix  stable-build.sh  tycho-api.yaml
_import/tycho-execution/: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  check.sh  release.config.js
_import/tycho-execution/config/: executor_addresses.json  protocol_specific_addresses.json  router_addresses.json  test_executor_addresses.json
_import/tycho-execution/foundry/: .env.example  foundry.toml  hardhat.config.js  package-lock.json  remappings.txt
_import/tycho-execution/tests/: optimized_transfers_integration_tests.rs  protocol_integration_tests.rs  sequential_strategy_integration_tests.rs  single_strategy_integration_tests.rs  single_strategy_integration_tests.rs.bak3  split_strategy_integration_tests.rs  uniswap_x_integration_tests.rs
crates/tycho/: Cargo.toml  README.md
crates/tycho-client/: CLAUDE.md  Cargo.toml  README.md
crates/tycho-client/src/: cli.rs  deltas.rs  lib.rs  main.rs  rpc.rs  stream.rs
crates/tycho-execution/: CLAUDE.md  Cargo.toml
crates/tycho-execution/config/: executor_addresses.json  protocol_specific_addresses.json  router_addresses.json  test_executor_addresses.json
crates/tycho-execution/contracts/: .gitignore  foundry.toml  hardhat.config.js  package.json
crates/tycho-execution/model/: Cargo.toml  README.md
crates/tycho-execution/tests/: optimized_transfers_integration_tests.rs  protocol_integration_tests.rs  sequential_strategy_integration_tests.rs  single_strategy_integration_tests.rs  split_strategy_integration_tests.rs  uniswap_x_integration_tests.rs
crates/tycho-indexer/: CLAUDE.md  Cargo.toml  README.md  build.rs  extractors.yaml
crates/tycho-indexer/src/: cli.rs  main.rs  ot.rs  testing.rs
crates/tycho-integration-test/: CLAUDE.md  Cargo.toml  README.md
crates/tycho-integration-test/src/: main.rs  metrics.rs
crates/tycho-protobuf/: Cargo.toml  buf.gen.yaml  build.rs
crates/tycho-protobuf/src/: convert.rs  error.rs  lib.rs
crates/tycho-simulation/: CLAUDE.md  Cargo.toml
crates/tycho-simulation/benches/: bebop_local_benchmark.rs  swap_benchmark.rs
crates/tycho-simulation/src/: serde_helpers.rs  utils.rs
crates/tycho/src/: lib.rs
protocols/crates/uniswap-v3/: Cargo.toml
protocols/substreams/: .cargo-update-skip  CLAUDE.md  Cargo.toml  rustfmt.toml
protocols/substreams/base-aerodrome-slipstreams/: Cargo.toml  base-aerodrome-slipstreams.yaml  integration_test.tycho.yaml
protocols/substreams/base-aerodrome-v1/: Cargo.toml  base-aerodrome-v1.yaml
protocols/substreams/ethereum-ambient/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-balancer-v2/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-balancer-v3/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-cowamm/: arbitrum-one-cowamm.yaml  base-cowamm.yaml  ethereum-cowamm.yaml  gnosis-cowamm.yaml
protocols/substreams/ethereum-curve/: Cargo.toml  ethereum-curve.yaml  substreams.yaml  unichain-curve.yaml
protocols/substreams/ethereum-ekubo-v2/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-ekubo-v3/: substreams.yaml
protocols/substreams/ethereum-erc4626/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-fluid/: Cargo.toml  rust-toolchain.toml  substreams.yaml
protocols/substreams/ethereum-fluid-v2/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
protocols/substreams/ethereum-lido/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-lido-v3/: integration_test.tycho.yaml  substreams.yaml
protocols/substreams/ethereum-liquidityparty/: Cargo.toml  ethereum-liquidityparty.yaml  integration_test.tycho.yaml
protocols/substreams/ethereum-maverick-v2/: Cargo.toml  ethereum-maverick-v2.yaml  substreams.yaml
protocols/substreams/ethereum-pancakeswap-v3/: Cargo.toml  arbitrum-pancakeswap-v3.yaml  base-pancakeswap-v3.yaml  bsc-pancakeswap-v3.yaml  ethereum-pancakeswap-v3.yaml
protocols/substreams/ethereum-rocketpool/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-sfrax/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
protocols/substreams/ethereum-sfraxeth/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
protocols/substreams/ethereum-template-factory/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-template-singleton/: Cargo.toml  substreams.yaml
protocols/substreams/ethereum-uniswap-v2/: Cargo.toml  arbitrum-uniswap-v2.yaml  base-pancakeswap-v2.yaml  base-uniswap-v2.yaml  bsc-pancakeswap-v2.yaml  bsc-uniswap-v2.yaml  ethereum-pancakeswap-v2.yaml  ethereum-sushiswap-v2.yaml  ethereum-uniswap-v2.yaml  unichain-uniswap-v2.yaml
protocols/substreams/ethereum-uniswap-v3-logs-only/: Cargo.toml  arbitrum-uniswap-v3.yaml  base-uniswap-v3.yaml  bsc-uniswap-v3.yaml  ethereum-uniswap-v3.yaml  (+2 more)
protocols/testing/: CLAUDE.md  Cargo.toml  build.rs  docker-compose.yaml  entrypoint.sh  run.Dockerfile  run.Dockerfile.dockerignore
tycho-client/: CLAUDE.md  Cargo.toml  README.md
tycho-client/src/: cli.rs  config.rs  deltas.rs  lib.rs  main.rs  rpc.rs  snapshot.rs  stream.rs  wasm.rs
tycho-common/: CLAUDE.md  Cargo.toml
tycho-common/examples/: action_chain_playground.rs
tycho-common/src/: display.rs  dto.rs  hex_bytes.rs  lib.rs  memory.rs  serde_primitives.rs  storage.rs  traits.rs
tycho-ethereum/: CLAUDE.md  Cargo.toml
tycho-ethereum/contracts/: Analyzer.sol  Forwarder.sol
tycho-ethereum/examples/: dci_trace.rs  gas-comparison.rs  run-analysis.rs
tycho-ethereum/src/: erc20.rs  erc20_abi.rs  errors.rs  gas.rs  lib.rs  main.rs  rpc_client.rs  test_fixtures.rs
tycho-storage/: CLAUDE.md  Cargo.toml  README.md
tycho-storage/sql_scripts/: prune_contract_storage.sh  remove_protocol_copy_approach.sh  remove_protocol_system.sh  toggle_transaction_cleanup_cronjob.sh
tycho-storage/src/: lib.rs
(+1014 files in other folders)
