[package]
name = "tycho-ethereum"
version.workspace = true
edition = "2021"
description = "Ethereum specific implementation of core tycho traits"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
tycho-common.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["json"] }
unicode-segmentation.workspace = true
rand.workspace = true
url = "2"
futures = "0.3"

# Required dependencies
web3 = { version = "0.19", default-features = false }
alloy = { version = "1.0.30", default-features = true, features = ["reqwest-default-tls"] }
alloy-rpc-types-trace = "1.0.24"

# Optional dependencies
clap = { version = "4", features = ["derive", "env"], optional = true }
humantime = { version = "2.1.0", optional = true }
tracing-test = "0.2.5"

[dev-dependencies]
pretty_assertions.workspace = true
mockito.workspace = true
rstest.workspace = true

[features]
default = []
onchain_data = ["humantime", "clap"]
