[package]
name = "tycho-ethereum"
version.workspace = true
edition = "2021"
description = "Ethereum specific implementation of core tycho traits"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
tycho-common.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
rand.workspace = true
url = "2"
futures = "0.3"

# Required dependencies
alloy = { version = "1.0.41", default-features = false, features = ["reqwest-default-tls", "rpc-client", "sol-types", "rpc-types-trace", "rpc-types-debug"] }

# Optional dependencies
clap = { version = "4", features = ["derive", "env"], optional = true }
humantime = { version = "2.1.0", optional = true }
tracing-test = "0.2.5"

[dev-dependencies]
pretty_assertions.workspace = true
mockito.workspace = true
rstest.workspace = true

[features]
default = []
onchain_data = ["humantime", "clap"]
