[package]
name = "tycho-execution"
version = "0.136.0"
edition = "2021"
description = "Provides tools for encoding and executing swaps against Tycho router and protocol executors."
repository = "https://github.com/propeller-heads/tycho-execution"
homepage = "https://www.propellerheads.xyz/tycho"
documentation = "https://docs.propellerheads.xyz/tycho"
keywords = ["propellerheads", "solver", "defi", "dex", "mev"]
license = "MIT"
categories = ["finance", "cryptography::cryptocurrencies"]
readme = "README.md"
exclude = [
    "foundry/*",
    "foundry",
    "tests/*",
    "tests/common",
    ".github/*",
    ".gitmodules",
]

[[bin]]
name = "tycho-encode"
path = "src/bin/tycho-encode.rs"
required-features = ["evm"]

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
hex = "0.4.3"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.69"
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4.39"
clap = { version = "4.5.3", features = ["derive"] }
once_cell = "1.20.2"
tycho-common = ">=0.113.0"
alloy = { version = "1.0.35", features = ["providers", "rpc-types-eth", "eip712", "signer-local", "node-bindings"], optional = true }
async-trait = { version = "0.1.88", optional = true }

[dev-dependencies]
rstest = "0.24.0"
tycho-execution = { path = "../tycho-execution", features = ["test-utils"] }

[features]
default = ["evm"]
evm = ["alloy"]
fork-tests = []
test-utils = ["async-trait"]

[profile.bench]
debug = true
