[package]
name = "tycho-client"
version.workspace = true
edition.workspace = true
description = "A library and CLI tool for querying and accessing liquidity data from Tycho indexer."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tycho-client"
path = "src/main.rs"

[dependencies]
tycho-common.workspace = true
futures03.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
hex.workspace = true
tracing-appender.workspace = true
lru.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["zstd"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
] }
http = "1"
backoff = { version = "0.4.0", features = ["tokio", "futures"] }
time = "0.3.41"
zstd = "0.13"
rustls.workspace = true

[features]
default = ["tls-aws-lc-rs"]
tls-aws-lc-rs = [
    "reqwest/rustls",
    "tokio-tungstenite/rustls-tls-native-roots",
    "rustls/aws-lc-rs",
]
tls-ring = [
    "reqwest/rustls-no-provider",
    "tokio-tungstenite/rustls-tls-native-roots",
    "rustls/ring",
]
tls-native = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
rand.workspace = true
mockall.workspace = true
mockito.workspace = true
tracing-subscriber = "0.3.17"
test-log = { version = "0.2.14", features = ["trace"] }
