[package]
name = "tycho-indexer"
version.workspace = true
edition.workspace = true
description = "Tycho indexer application binary. Runs the actual indexing. Exposes ws and http endpoints to access extracted data"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
# readme intentionally omitted — binary crate, not published to crates.io

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tycho-indexer"
path = "src/main.rs"

[dependencies]
actix = "0.13.1"
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
console-subscriber.workspace = true
deepsize.workspace = true
diesel-async.workspace = true
futures03.workspace = true
hex.workspace = true
mockall.workspace = true
once_cell = "1.18.0"
prost = "0.11"
prost-types = "0.11"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-retry = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.9", features = ["tls-roots", "gzip"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tycho-common.workspace = true
tycho-ethereum.workspace = true
tycho-storage.workspace = true
uuid.workspace = true
# Pinned: actix-web 4.12+ uses actix-http methods not present in 3.11.x; keep at last working set
actix-web = { version = "=4.11.0", default-features = false, features = [
    "macros",
    "compress-zstd",
    "http2",
] }
# Pinned: actix-http >=3.12 removed the ws module used by actix-web-actors 4.3.1
actix-cors = "0.6.5"
actix-web-actors = "=4.2.0"
actix-web-opentelemetry = "0.16.0"
alloy = { workspace = true, default-features = false, features = [
    "sol-types",
    "reqwest",
] }
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
mini-moka = "0.10.3"
num-bigint = "0.4.4"
num-traits = "0.2.19"
num_cpus = "1.16.0"
opentelemetry = { version = "0.21" }
opentelemetry-otlp = { version = "0.14", default-features = false, features = [
    "trace",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
rand.workspace = true
serde_yaml = "0.9.32"
tracing-opentelemetry = { version = "0.22", default-features = false }
tycho-substreams = "0.6.0"
utoipa = { version = "4.2.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
zstd = "0.13"

[dev-dependencies]
pretty_assertions.workspace = true
tokio-tungstenite.workspace = true
rstest.workspace = true
mockito.workspace = true
actix-rt = "2.9.0"
actix-test = "0.1.2"
test-log = { version = "0.2.14", features = ["trace"] }
float_eq = "1.0.1"
tycho-common = { workspace = true, features = ["test-utils"] }
metrics-util = { version = "0.20.0", features = ["debugging"] }
serde_json = { workspace = true, features = ["preserve_order"] }
