[package]
name = "tycho-integration-test"
version.workspace = true
edition.workspace = true

# Binary requires a rustls provider (tycho-client + tycho-simulation TLS
# clients run inside this harness). `required-features` makes cargo skip the
# bin under `--no-default-features` instead of failing the build.
[[bin]]
name = "tycho-integration-test"
path = "src/main.rs"
required-features = ["tls-aws-lc-rs"]

[dependencies]
actix-web = "4.11.0"
alloy = { workspace = true, features = ["rpc-types-eth", "sol-types"] }
clap = { version = "4.5.48", features = ["derive"] }
dotenv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
miette = { version = "7.6.0" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = "0.9.2"
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tycho-client = { workspace = true }
tycho-common = { workspace = true }
tycho-simulation = { workspace = true, features = ["evm"] }
tycho-test = { workspace = true }
rustls.workspace = true

[features]
default = ["tls-aws-lc-rs"]
tls-aws-lc-rs = [
    "rustls/aws-lc-rs",
    "tycho-client/tls-aws-lc-rs",
    "tycho-simulation/tls-aws-lc-rs",
]
tls-ring = [
    "rustls/ring",
    "tycho-client/tls-ring",
    "tycho-simulation/tls-ring",
]
