[package]
name = "tycho-simulation"
version.workspace = true
edition.workspace = true
description = "Provides tools for interacting with protocol states, calculating spot prices, and quoting token swaps."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme = "README.md"
rust-version = "1.91.0"

[package.metadata.cargo-machete]
ignored = ["ruint"]

[dependencies]
# Serialization/Deserialization
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
typetag = { workspace = true }


# Error handling
thiserror = { workspace = true }

# Async & concurrency
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.16"

# Logging & Tracing
tracing = { workspace = true }

# Utility
dotenv = { workspace = true }
enum_delegate = "0.2.0"
itertools = { workspace = true }
num-traits = { workspace = true }

# Enum utilities
strum_macros = { workspace = true }

# Caching
lazy_static = "1.4.0"

# Tycho dependencies
tycho-client = { workspace = true }
tycho-common = { workspace = true }
tycho-ethereum = { workspace = true }

# EVM dependencies
alloy = { workspace = true, features = [
    "sol-types",
    "rand",
    "dyn-abi",
    "json-abi",
], optional = true }
foundry-block-explorers = { version = "0.22.0", optional = true }
num-bigint = { workspace = true }
revm = { version = "29.0.1", features = [
    "alloydb",
    "serde",
    "optional_eip3607",
], optional = true }
revm-inspectors = { version = "0.30.0", features = ["serde"], optional = true }
ruint = { workspace = true }

# Ekubo
ekubo_sdk = { version = "3", features = ["evm", "serde"] }
evm_ekubo_sdk = { version = "0.6.5", features = ["serde"] }

# rfq
alloy-chains = "0.2.18"
async-stream = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
hex-literal = { workspace = true }
http = { version = "1.0", optional = true }
prost = { version = "0.13", optional = true }
reqwest = { version = "0.12.22", default-features = false, features = [
    "native-tls",
], optional = true }
tokio-tungstenite = { version = "0.28.0", features = [
    "native-tls",
], optional = true }

[dev-dependencies]
tycho-execution = { workspace = true }
tycho-test = { workspace = true }
tokio-test = "0.4.4"
approx = "0.5.1"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tempfile = "3.13.0"
mockall = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
unicode-width = "0.1.13"
tracing-appender = { workspace = true }

[features]
default = ["evm", "rfq"]
network_tests = []
evm = [
    "dep:foundry-block-explorers",
    "dep:revm",
    "dep:revm-inspectors",
    "dep:alloy",
    "dep:reqwest",
]
rfq = [
    "dep:reqwest",
    "dep:async-trait",
    "dep:tokio-tungstenite",
    "dep:async-stream",
    "dep:http",
    "dep:prost",
]
