[workspace]
members = [
    "ethereum-cowamm",
    "ethereum-balancer-v2",
    "ethereum-curve",
    "crates/tycho-substreams",
    "crates/substreams-helper",
    "ethereum-ambient",
    "ethereum-uniswap-v2",
    "ethereum-uniswap-v3",
    "ethereum-pancakeswap-v3",
    "ethereum-sfrax",
    "ethereum-sfraxeth",
    "ethereum-uniswap-v3-logs-only",
    "ethereum-template-factory",
    "ethereum-template-singleton",
    "ethereum-uniswap-v4/shared",
    "ethereum-uniswap-v4/no-hooks",
    "ethereum-uniswap-v4/with-hooks",
    "ethereum-ekubo-v2",
    "ethereum-ekubo-v3",
    "ethereum-maverick-v2",
    "ethereum-lido",
    "ethereum-balancer-v3",
    "ethereum-fluid",
    "base-aerodrome-slipstreams",
    "ethereum-erc4626",
    "ethereum-rocketpool",
    "unichain-velodrome",
    "ethereum-liquidityparty",
]
resolver = "2"

# Redirect crates.io tycho-substreams to the local workspace crate so that
# uniswap-v3-core (root workspace member) and the substreams modules all share
# the same types when compiled together.
[patch.crates-io]
tycho-substreams = { path = "crates/tycho-substreams" }
substreams-helper = { path = "crates/substreams-helper" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
